FIX-21 Animations. Fixed jittering collapse animations.

--- a/KaberdinCourseiLearning/KaberdinCourseiLearning/wwwroot/css/Comment/Comment.css
+++ b/KaberdinCourseiLearning/KaberdinCourseiLearning/wwwroot/css/Comment/Comment.css
@@ -12,6 +12,7 @@
     scrollbar-width: none;
     resize:vertical;
     min-height:7rem;
+    max-height:25rem;
 }
 
 .CommentBoxContent::-webkit-scrollbar {
