--- a/KaberdinCourseiLearning/KaberdinCourseiLearning/wwwroot/css/site.css
+++ b/KaberdinCourseiLearning/KaberdinCourseiLearning/wwwroot/css/site.css
@@ -53,18 +53,17 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
-
 .hoverable:hover p {
-    color: #fff
+    color:white;
 }
-
 .hoverable:hover {
     -webkit-box-shadow: 0 0 25px 0 rgba(20, 27, 201, .05);
-            box-shadow: 0 0 25px 0 rgba(20, 27, 201, .05);
-    border:none;
+    box-shadow: 0 0 25px 0 rgba(20, 27, 201, .05);
+    border: none;
     cursor: pointer;
     background-image: -o-linear-gradient(135deg, #27b88d 0%, #22dd73 100%);
-    background-image: linear-gradient(-45deg, #27b88d 0%, #22dd73 100%)
+    background-image: linear-gradient(-45deg, #27b88d 0%, #22dd73 100%);
+    color: white;
 }
 .bg-limegreen {
     background-image: -o-linear-gradient(135deg, #27b88d 0%, #22dd73 100%);
